refactor: Improved code structure in aggregate and ID files

--- a/src/libraries/Wiaoj.Libraries.Domain.Abstractions/Wiaoj.Libraries.Domain.Abstractions.csproj
+++ b/src/libraries/Wiaoj.Libraries.Domain.Abstractions/Wiaoj.Libraries.Domain.Abstractions.csproj
@@ -9,6 +9,9 @@
     <Authors>Wiaoj</Authors>
     <PackageTags>ddd</PackageTags>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <Version>1.0.1</Version>
+    <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
+    <FileVersion>$(VersionPrefix)</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
