--- a/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.Domain/Wiaoj.ECommerce.CatalogDefinitionService.Domain.csproj
+++ b/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.Domain/Wiaoj.ECommerce.CatalogDefinitionService.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Wiaoj.Libraries.Domain.Abstractions" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
