--- a/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.Domain/Wiaoj.ECommerce.CatalogDefinitionService.Domain.csproj
+++ b/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.Domain/Wiaoj.ECommerce.CatalogDefinitionService.Domain.csproj
@@ -9,5 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Wiaoj.Libraries.Domain.Abstractions" Version="1.0.1" />
   </ItemGroup>
-
+    
+    <ItemGroup>
+        <InternalsVisibleTo Include="Wiaoj.ECommerce.CatalogDefinitionService.Domain.Tests" />
+    </ItemGroup>
 </Project>
