--- a/src/libraries/Wiaoj.Libraries.Domain.Abstractions/Wiaoj.Libraries.Domain.Abstractions.csproj
+++ b/src/libraries/Wiaoj.Libraries.Domain.Abstractions/Wiaoj.Libraries.Domain.Abstractions.csproj
@@ -9,7 +9,7 @@
     <Authors>Wiaoj</Authors>
     <PackageTags>ddd</PackageTags>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
     <FileVersion>$(VersionPrefix)</FileVersion>
   </PropertyGroup>
@@ -21,5 +21,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <IsAotCompatible>True</IsAotCompatible>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Ulid" Version="1.3.3" />
+  </ItemGroup>
 
 </Project>
