--- a/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.Persistence/Wiaoj.ECommerce.CatalogDefinitionService.Persistence.csproj
+++ b/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.Persistence/Wiaoj.ECommerce.CatalogDefinitionService.Persistence.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Wiaoj.ECommerce.CatalogDefinitionService.Application\Wiaoj.ECommerce.CatalogDefinitionService.Application.csproj" />
+  </ItemGroup>
+
 </Project>
