(update): changed create catalog item

--- a/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.Application/Wiaoj.ECommerce.CatalogDefinitionService.Application.csproj
+++ b/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.Application/Wiaoj.ECommerce.CatalogDefinitionService.Application.csproj
@@ -13,7 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Scrutor" Version="4.2.2" />
-    <PackageReference Include="Wiaoj.Libraries.Domain.Abstractions" Version="1.0.2" />
+    <PackageReference Include="Wiaoj.Libraries.Domain.Abstractions" Version="1.0.*" />
   </ItemGroup>
 
   <ItemGroup>
