--- a/src/libraries/Wiaoj.Libraries.Domain.Abstractions/Wiaoj.Libraries.Domain.Abstractions.csproj
+++ b/src/libraries/Wiaoj.Libraries.Domain.Abstractions/Wiaoj.Libraries.Domain.Abstractions.csproj
@@ -9,7 +9,7 @@
     <Authors>Wiaoj</Authors>
     <PackageTags>ddd</PackageTags>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <Version>1.1.1</Version>
+    <Version>1.2.0</Version>
     <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
     <FileVersion>$(VersionPrefix)</FileVersion>
   </PropertyGroup>
@@ -23,6 +23,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mediator.Abstractions" Version="2.1.7" />
     <PackageReference Include="Ulid" Version="1.3.3" />
   </ItemGroup>
 
