--- a/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.WebAPI/Wiaoj.ECommerce.CatalogDefinitionService.WebAPI.csproj
+++ b/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.WebAPI/Wiaoj.ECommerce.CatalogDefinitionService.WebAPI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Wiaoj.Libraries.AspNetCore" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Wiaoj.ECommerce.CatalogDefinitionService.Application\Wiaoj.ECommerce.CatalogDefinitionService.Application.csproj" />
     <ProjectReference Include="..\Wiaoj.ECommerce.CatalogDefinitionService.Infrastructure\Wiaoj.ECommerce.CatalogDefinitionService.Infrastructure.csproj" />
     <ProjectReference Include="..\Wiaoj.ECommerce.CatalogDefinitionService.Persistence\Wiaoj.ECommerce.CatalogDefinitionService.Persistence.csproj" />
