(feature): Added Serilog

--- a/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.WebAPI/appsettings.Development.json
+++ b/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.WebAPI/appsettings.Development.json
@@ -1,8 +1,84 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Async" /*, "Serilog.Sinks.Seq"*/ ],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                //"Microsoft.Hosting.Lifetime": "Information"
+                //"Microsoft": "Warning",
+                //"System": "Error",
+                //"Microsoft.EntityFrameworkCore": "Warning",
+                //"Microsoft.AspNetCore": "Warning",
+                //"Hangfire": "Information"
+            }
+        },
+        "LevelSwitches": { "controlSwitch": "Verbose" },
+        "WriteTo": [
+            {
+                "Name": "Async",
+                "Args": {
+                    "configure": [
+                        {
+                            "Name": "Console",
+                            "Args": {
+                                "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+                                "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+                                "outputTemplate": "[{Timestamp:HH:mm:ss.fff}] [{Level:f3}] {Message:lj} <:{SourceContext}>{NewLine}{Exception}"
+                                //"outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:uf3}] {Message:lj} <:{SourceContext}>{NewLine}{Exception}"
+                                //"outputTemplate": "[{Timestamp:HH:mm:ss} {Level:uf3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception} {Properties:j}",
+
+                            }
+                        },
+                        {
+                            "Name": "Seq",
+                            "Args": {
+                                "serverUrl": "http://localhost:5341",
+                                "apiKey": "yeEZyL3SMcxEKUijBjN",
+                                "controlLevelSwitch": "$controlSwitch"
+                            }
+                        }                     
+                    ]
+                }
+            } 
+        ],
+        "Destructure": [
+            {
+                "Name": "ToMaximumDepth",
+                "Args": { "maximumDestructuringDepth": 4 }
+            },
+            {
+                "Name": "ToMaximumStringLength",
+                "Args": { "maximumStringLength": 100 }
+            },
+            {
+                "Name": "ToMaximumCollectionCount",
+                "Args": { "maximumCollectionCount": 10 }
+            }
+        ],
+        "Properties": {
+            "Application": "Wiaoj.services.catalog.api",
+            "InstanceId": "1",
+            "Environment": "Development"
+        },
+        "Enrich": [
+            "FromLogContext",
+            "WithEnvironmentUserName",
+            "WithEnvironmentName",
+            "WithExceptionDetails",
+            "WithMachineName",
+            "WithProcessId",
+            "WithProcessName",
+            "WithThreadId",
+            "WithClientIp",
+            "WithCorrelationId",
+            "WithUserAgent",
+            "WithVersion"
+        ]
     }
-  }
 }
