--- a/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.Infrastructure/Wiaoj.ECommerce.CatalogDefinitionService.Infrastructure.csproj
+++ b/src/services/CatalogDefinitionService/Wiaoj.ECommerce.CatalogDefinitionService.Infrastructure/Wiaoj.ECommerce.CatalogDefinitionService.Infrastructure.csproj
@@ -10,6 +10,15 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
+    <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="2.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" /> 
   </ItemGroup>
 
   <ItemGroup>
