(refactor): Code Cleanup

--- a/src/proxies/Wiaoj.ECommerce.Proxies.CatalogGateway/appsettings.ReverseProxy.json
+++ b/src/proxies/Wiaoj.ECommerce.Proxies.CatalogGateway/appsettings.ReverseProxy.json
@@ -1,15 +1,16 @@
 {
     "ReverseProxy": {
         "Routes": {
-            "Catalog-Route": {
-                "ClusterId": "Catalog-Cluster",
+            "Catalog-Definition-Route": {
+                "ClusterId": "Catalog-Definition-Cluster",
                 "RateLimiterPolicy": "fixed",
                 "OutputCachePolixy": "20secPolicy",
                 "Match": {
                     "Path": "/{**catch-all}"
                 },
                 "Transforms": [
-                    { "PathPrefix": "/api/v1" },
+                    { "PathPrefix": "/api" },
+                    //{ "PathPrefix": "/api/v1" },
                     { "ClientCert": "X-Client-Cert" },
                     { "RequestHeadersCopy": "true" },
                     { "RequestHeaderOriginalHost": "true" },
@@ -30,7 +31,7 @@
             }
         },
         "Clusters": {
-            "Catalog-Cluster": {
+            "Catalog-Definition-Cluster": {
                 "LoadBalancingPolixy": "PowerOfTwoChoices",
                 "HttpRequest": {
                     "ActivityTimeout": "00:00:30",
@@ -40,7 +41,7 @@
                 },
                 "Destinations": {
                     "default_catalog": {
-                        "Address": "https://localhost:8000"
+                        "Address": "https://localhost:5001"
                     }
                 }
             }
