(feature): Catalog Discovery Service added to Catalog Gateway

--- a/src/proxies/Wiaoj.ECommerce.Proxies.CatalogGateway/appsettings.ReverseProxy.json
+++ b/src/proxies/Wiaoj.ECommerce.Proxies.CatalogGateway/appsettings.ReverseProxy.json
@@ -28,6 +28,24 @@
                     //    "When": "Always"
                     //}
                 ]
+            },
+            "Catalog-Discovery-Route": {
+                "ClusterId": "Catalog-Discovery-Cluster",
+                "RateLimiterPolicy": "fixed",
+                "OutputCachePolixy": "20secPolicy",
+                "Match": {
+                    "Path": "/{**catch-all}"
+                },
+                "Transforms": [
+                    { "PathPrefix": "/api" },
+                    { "ClientCert": "X-Client-Cert" },
+                    { "RequestHeadersCopy": "true" },
+                    { "RequestHeaderOriginalHost": "true" },
+                    {
+                        "X-Forwarded": "Append",
+                        "HeaderPrefix": "X-Forwarded-"
+                    }
+                ]
             }
         },
         "Clusters": {
@@ -42,6 +60,20 @@
                 "Destinations": {
                     "default_catalog": {
                         "Address": "https://localhost:5001"
+                    }
+                }
+            },
+            "Catalog-Discovery-Cluster": {
+                "LoadBalancingPolixy": "PowerOfTwoChoices",
+                "HttpRequest": {
+                    "ActivityTimeout": "00:00:30",
+                    "Version": "3",
+                    "VersionPolicy": "RequestVersionExact",
+                    "AllowResponseBuffering": true
+                },
+                "Destinations": {
+                    "default_catalog": {
+                        "Address": "https://localhost:5002"
                     }
                 }
             }
