--- a/src/services/CatalogDiscoveryService/Wiaoj.ECommerce.CatalogDiscoveryService.WebAPI/Wiaoj.ECommerce.CatalogDiscoveryService.WebAPI.csproj
+++ b/src/services/CatalogDiscoveryService/Wiaoj.ECommerce.CatalogDiscoveryService.WebAPI/Wiaoj.ECommerce.CatalogDiscoveryService.WebAPI.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.14.8" />
+  </ItemGroup>
+
 </Project>
